--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
         "ejs": "^3.1.6",
         "express": "^4.17.1",
         "express-fileupload": "^1.2.1",
+        "global": "^4.4.0",
         "joi": "^17.4.2",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.0.6",
-        "morgan": "^1.10.0"
+        "morgan": "^1.10.0",
+        "nodemailer": "^6.6.5",
+        "nodemon": "^2.0.13"
     }
 }
